--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,4 +6,114 @@
 body{
     background-color: #000010;
     font-family: Arial, Helvetica, sans-serif;
+    color: #ffffff;
 }
+ 
+
+@font-face{
+
+    font-family: BerkshireSwash;
+    src: url(../Fonts/BerkshireSwash-Regular.ttf);
+}
+@font-face{
+
+    font-family: Itim;
+    src: url(../Fonts/Itim-Regular.ttf);
+}
+
+header{
+background-color: #202122;
+padding: 30px;
+height: 10px;
+box-sizing: border-box;
+padding-bottom: 40px;
+z-index: 5;
+
+}
+#list{
+
+    transform: translate(-10px, -30px)
+
+
+}
+
+img{
+
+    transform: translateY(-50%);
+}
+span, sup{
+    /* background-color: aqua; */
+
+    position: relative;
+    bottom: 30px;
+    font-weight: bold;
+    font-size: 25px;
+}
+span{
+    letter-spacing: -3px;
+    right:5px;
+    font-family: Itim;
+    
+}
+sup{
+    font-size: 10px;
+    position: relative;
+    font-weight: 10;
+    bottom: 40px;
+    right: 5px;
+    
+}
+
+
+form{
+    display: inline-block;
+    position: absolute;
+    left: 45%;
+    top: 20px;
+    z-index: 1;
+   
+    
+
+}
+
+input[type="submit"]{
+    padding: 10px;
+    background-color: 	#474747;
+    color: white;
+    font-family: Itim;
+    font-size: 15px;
+    border: none;
+    padding-left: 40px;
+    background-image: url(../assets/icons8-pesquisar-20.png);
+    background-repeat: no-repeat;
+    background-position: calc(5%);
+    padding-bottom: 11px;
+    /* outline-width: ; */
+
+}
+
+input[type="text"]{
+
+    padding: 10px;
+    border: none;
+    background-color: black;
+    outline-style: solid;
+    outline-width: 2px;
+    outline-color: #474747;
+
+
+    
+    
+}
+
+
+.icons-inputs{
+    display: inline-block;
+    float: right;
+    margin-right: 20px;
+    
+    
+}
+
+
+
