--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,11 +22,14 @@ body{
 }
 
 header{
+width: 100%; 
 background-color: #202122;
 padding: 30px;
 height: 10px;
 box-sizing: border-box;
-padding-bottom: 40px;
+padding-bottom: 30px;
+position: sticky;
+top: 0px;
 z-index: 5;
 
 }
@@ -42,7 +45,7 @@ img{
     transform: translateY(-50%);
 }
 span, sup{
-    /* background-color: aqua; */
+
 
     position: relative;
     bottom: 30px;
@@ -66,37 +69,40 @@ sup{
 
 
 form{
-    display: inline-block;
+    
     position: absolute;
-    left: 45%;
-    top: 20px;
-    /* z-index: 1; */
+    left: 40%;
+    top: 18px;
+    z-index: 1;
    
     
 
 }
 
 input[type="submit"]{
-    padding: 10px;
-    background-color: 	#474747;
+    position: absolute;
+    transform: translate(-54px, -4px);
+    padding: 10.3px;
+    width: 65px;
+    background-color:#474747;
     color: white;
     font-family: Itim;
     font-size: 15px;
     border: none;
-    padding-left: 40px;
     background-image: url(../assets/icons8-pesquisar-20.png);
     background-repeat: no-repeat;
-    background-position: calc(5%);
-    padding-bottom: 11px;
-    /* outline-width: ; */
+    background-position: calc(50%);
+    
 
 }
 
 input[type="text"]{
-
+    transform: translate(-50px, -10px);
+    width: 400px;
     padding: 10px;
     border: none;
     background-color: black;
+    color: white;
     outline-style: solid;
     outline-width: 2px;
     outline-color: #474747;
@@ -105,14 +111,59 @@ input[type="text"]{
     
     
 }
+input[type="text"]:hover{
+
+    background-image: url(../assets/icons8-pesquisar-20.png);
+    background-repeat: no-repeat;
+    background-position: calc(2%);
+    padding-left: 27px;
+    outline-style: solid;
+    outline-color: #0000FF;
+    outline-width: 2px;
+
+}
+
+.keyboard{
+    position: absolute;
+    transform: translate(-78px, 5px);
+
+}
 
 
-.icons-inputs{
-    display: inline-block;
+
+
+#micro{
+
+    transform: translate(20px, 3px);
+    background-color: black;
+    border-radius: 50%;
+    
+    
+}
+
+#pontos{
+    position: absolute;
+    right: 200px;
+   
+}
+
+#login{
+
     float: right;
-    margin-right: 20px;
+    color: #2f2fd6;
+    border: solid 1px #2f2fd6;
+    padding: 5px;
+    padding-right: 10px;
+    height: 30px;
+    transform: translate(10px, -23px);
+
     
-    
+}
+.content{
+    transform: translateY(-10px);
+}
+#perfil{
+    transform: translateY(10px);
 }
 
 
