--- a/CSS/style.css
+++ b/CSS/style.css
@@ -173,3 +173,18 @@ input[type="text"]:hover{
                 /* STYLE DA SECTION */
 
 
+section{
+
+    background-color: #ffffff;
+    padding:20px ;
+    padding-top: 50px;
+    text-align: center;
+    background-color: #1a1919;
+    width: 80%;
+    margin: auto;
+}
+video{
+
+    box-shadow: 0px 2px 25px #0000ff;
+    border-radius: 5px;
+}
