--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,6 +82,7 @@ form{
 
 input[type="submit"]{
     position: absolute;
+    border-radius: 2px;
     transform: translate(-54px, -4px);
     padding: 10.3px;
     width: 65px;
@@ -102,6 +103,7 @@ input[type="text"]{
     width: 400px;
     padding: 10px;
     border: none;
+    border-radius: 2px;
     background-color: black;
     color: white;
     outline-style: solid;
@@ -151,7 +153,8 @@ input[type="text"]:hover{
 #login{
 
     float: right;
-    color: #2f2fd6;
+    border-radius: 2px;
+    color: #3c3cf7;
     border: solid 1px #2f2fd6;
     padding: 5px;
     padding-right: 10px;
@@ -180,11 +183,43 @@ section{
     text-align: center;
     width: 55%;
     margin: auto;
+    /* background-color: #0000FF; */
+    position: relative;
+    padding-bottom: 50px;
+    
     
 }
 video{
 
     box-shadow: 0px 2px 25px #0000ff;
     border-radius: 5px;
+    
+    
+}
+
+h3,p{
+    text-align: left;
+    transform: translate(50px, 25px);
+    margin-top: 15px;
+    
+    
+    
+}
+p{
+    color: gray;
+}
+.icons{
+
+    transform: translate(100px);
+
+    
+}
+.icons img{
+    transform: translate(10px, 5px);
+    margin-right: 1px;
+}
+.b{
+
+    padding: 20px;
 }
 
