--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,7 +82,6 @@ form{
 
 input[type="submit"]{
     position: absolute;
-    border-radius: 2px;
     transform: translate(-54px, -4px);
     padding: 10.3px;
     width: 65px;
@@ -103,7 +102,6 @@ input[type="text"]{
     width: 400px;
     padding: 10px;
     border: none;
-    border-radius: 2px;
     background-color: black;
     color: white;
     outline-style: solid;
@@ -191,7 +189,7 @@ section{
 }
 video{
 
-    box-shadow: 0px 2px 25px #0000ff;
+    box-shadow: 0px 2px 50px #ff0000;
     border-radius: 5px;
     
     
@@ -220,6 +218,73 @@ p{
 }
 .b{
 
-    padding: 20px;
+    padding: 15px;
+    font-size: 15px;
 }
 
+footer{
+    width: 50%;
+    margin: auto;
+    padding: 70px;
+    position: relative;
+    bottom: 100px;
+    
+}
+#logo{
+    transform: translateY(30px);
+    border-radius: 50%;
+    padding-right: 20px;
+    
+    
+}
+
+.name{
+    position: relative;
+    bottom: 30px;
+    right: 5px;
+}
+.music{
+    bottom: 20px;
+}
+.inscritos{
+    font-weight: 100;
+    color: gray;
+    font-size: 14px;
+    position: relative;
+    right: 120px;
+    bottom: 5px;
+
+}
+.inscrever{
+    background-color: #ff0000;
+    padding: 10px;
+    border-radius: 2px;
+    position: absolute;
+    right: 70px;
+    bottom:90px;
+    
+
+}
+#final-page{
+    position: relative;
+    top: 20px;
+    left: 100px;
+    font-size: 15px;
+}
+
+.final{
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    letter-spacing: 1px;
+    position: absolute;
+    bottom: 1px;
+    left: 170px;
+    color: #808080;
+}
+
+.marcadagua{
+    padding: 10px;
+    text-shadow: 1px 1px #ff0000;
+    text-decoration: underline;
+}
