estrutura do cadastro

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -283,8 +283,16 @@ footer{
     color: #808080;
 }
 
+            /* final do footer */
+        /* <---------------------------------------> */
+
 .marcadagua{
     padding: 10px;
     text-shadow: 1px 1px #ff0000;
     text-decoration: underline;
 }
+
+/* ------------------------------------------------ */
+
+
+
