--- a/CSS/style.css
+++ b/CSS/style.css
@@ -150,14 +150,18 @@ input[type="text"]:hover{
 
 #login{
 
-    float: right;
+    
     border-radius: 2px;
     color: #3c3cf7;
     border: solid 1px #2f2fd6;
     padding: 5px;
     padding-right: 10px;
     height: 30px;
-    transform: translate(10px, -23px);
+    width: fit-content;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    /* transform: translate(10px, -23px); */
 
     
 }
@@ -181,7 +185,6 @@ section{
     text-align: center;
     width: 55%;
     margin: auto;
-    /* background-color: #0000FF; */
     position: relative;
     padding-bottom: 50px;
     
@@ -189,7 +192,7 @@ section{
 }
 video{
 
-    box-shadow: 0px 2px 50px #ff0000;
+    box-shadow: 0px 2px 50px #ff4242;
     border-radius: 5px;
     
     
