--- a/CSS/cadastro.css
+++ b/CSS/cadastro.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #000000;
+    background-color: #535353;
     margin: 0px;
     padding: 0px;
 }
@@ -10,12 +10,12 @@ body{
     top: 100px;
     margin: auto;
     text-align: center;
-    background-color: #ff5050;
+    background-color: #000000;
     padding: 50px;
     padding-top: 20px;
     padding-right: 53px;
     border-radius: 10px;
-    box-shadow: 1px 1px 200px #ffffff;
+    box-shadow: 1px 1px 200px white;
     
 }
 
@@ -115,7 +115,7 @@ input[type="checkbox"]{
 
 }
 b{
-    color: black;
+    color: #ff0000;
 }
 
 span{
