--- a/CSS/cadastro.css
+++ b/CSS/cadastro.css
@@ -5,7 +5,7 @@ body{
 }
 
 .conteiner{
-    width: fit-content;
+    width: 50%;
     position: relative;
     top: 100px;
     margin: auto;
@@ -24,6 +24,7 @@ h2{
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: underline;
     padding-left: 33px;
+    color: #ffffff;
 
 }
 
@@ -143,7 +144,191 @@ textarea{
 input[type="reset"]{
     transform: translate(-40px);
 }
+        /* FINAL DO CADASTRO */
+        /* <--------------------------------------------------> */
+                /* MEDIA QUERIES AQUI */
 
 
 
+                
+        @media screen and (max-width: 800px) {
+            
+            
+.conteiner{
+    width: 70%;
+    height: 800px;
+    position: relative;
+    top: 100px;
+    margin: auto;
+    text-align: center;
+    background-color: #000000;
+    padding: 50px;
+    padding-top: 20px;
+    padding-right: 50px;
+    padding-bottom: 140px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 50px white;
+    
+}
+
+h2{
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
+    padding-left:5px;
+    color: #ffffff;
+    font-size: 18px;
+
+}
+
+input, select{
+    border: none;
+    padding: 5px;
+    margin-bottom: 20px;
+    margin-left: 30px;
+    font-family: Itim;
+    font-weight: bold;
+    font-size: 16px;
+    border-radius: 5px;
+    
+  
+    
+    
+}
+
+
+#username,#email{
+
+    width: 70%;
+    box-sizing: border-box;
+    text-align: center;
+    transform: translate(-20px);
+    
+    
+}   
+
+#senha{
+    width:50%;
+    transform: translate(-21px);
+    text-align: center;
+}
+#confirmar-senha{
+    width: 50%;
+    text-align: center;
+    transform: translate(-20px);
+    margin-bottom: 20px;
+
+}
+#place{
+
+    color: #000000;
+    width: 50%;
+    transform: translate(-20px);
+}
+.estado{
+    position: relative;
+    left: -5px;
+    
+}
+
+
+select{
+    background-image: url(../assets/icon-mão-para-baixo.png);
+    background-repeat: no-repeat;
+    background-position: calc(100% - 10px);
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none
+
+}
+
+
+
+label{
+    font-weight: bold;
+    color: #ffffff;
+    font-size: 13px;
+
+    
+    
+    
+}
+
+
+
+
+.confirmar-senha{
+    position: relative;
+    right: 2px;
+
+}
+
+input[type="radio"]{
+
+    margin-top: 25px;
+    width: 5%;
+    transform: translate(-20px);
+  
+
+    
+    
+    
+    
+
+
+}
+input[type="checkbox"]{
+    margin-bottom: 20px;
+    margin-top: 30px;
+    transform: translate(-20px);
+
+
+}
+b{
+    color: #ff0000;
+    font-size: 16px;
+    position: relative;
+    right: 20px;
+}
+
+span{
+    color: #ffffff;
+    font-weight: bold;
+    position: relative;
+    
+    top: 15px;
+    left: -10px;
+    
+}
+
+
+textarea{
+    resize: none;
+    transform: translate(-10px);
+    border: none;
+    border-radius: 10px;
+    margin-top: 15px;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    box-shadow: 0px 0px 30px white;
+
+}
+
+input[type="reset"]{
+    transform: translate(-40px);
+    padding: 5px;
+    font-size: 13px;
+}
+
+input[type="submit"]{
+
+    padding: 5px;
+    font-size: 13px;
+    transform: translate(-10px);
+}
+        
+
+}
 
