--- a/CSS/cadastro.css
+++ b/CSS/cadastro.css
@@ -5,7 +5,7 @@ body{
 }
 
 .conteiner{
-    width: 50%;
+    width: fit-content;
     position: relative;
     top: 100px;
     margin: auto;
@@ -23,7 +23,7 @@ h2{
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: underline;
-    padding-left: 33px;
+    padding-right: 20px;
     color: #ffffff;
 
 }
@@ -61,18 +61,19 @@ input, select{
 
     box-sizing: border-box;
     text-align: center;
-    transform: translate(-60px);
+    transform: translate(-20px);
     margin-bottom: 20px;
 
 }
 #place{
 
     color: #000000;
-    width: 200px;
+    width: 150px;
+    transform: translate(-20px);
 }
 .estado{
     position: relative;
-    left: 10px;
+    left: -5px;
     
 }
 
@@ -84,6 +85,7 @@ select{
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none
+    
 
 }
 
@@ -97,7 +99,7 @@ label{
 }
 .confirmar-senha{
     position: relative;
-    right: 36px;
+    right: 2px;
 
 }
 
@@ -124,7 +126,7 @@ span{
     font-weight: bold;
     position: relative;
     top: 10px;
-    left: 8px;
+    left: -10px;
     
 }
 
@@ -222,7 +224,7 @@ input, select{
 #place{
 
     color: #000000;
-    width: 50%;
+    width: 30%;
     transform: translate(-20px);
 }
 .estado{
@@ -247,7 +249,7 @@ select{
 label{
     font-weight: bold;
     color: #ffffff;
-    font-size: 13px;
+    font-size: 15px;
 
     
     
