--- a/CSS/cadastro.css
+++ b/CSS/cadastro.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #535353;
+    background-color: black;
     margin: 0px;
     padding: 0px;
 }
@@ -10,12 +10,12 @@ body{
     top: 100px;
     margin: auto;
     text-align: center;
-    background-color: #000000;
+    background-color: #535353bb;;
     padding: 50px;
     padding-top: 20px;
     padding-right: 53px;
     border-radius: 10px;
-    box-shadow: 1px 1px 200px white;
+    box-shadow: 1px 1px 100px white;
     
 }
 
@@ -136,15 +136,21 @@ textarea{
     border: none;
     border-radius: 10px;
     margin-top: 13px;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
 
 }
 
+input[type="submit"]{
+
+    padding: 5px;
+}
+
 input[type="reset"]{
-    transform: translate(-40px);
+    transform: translate(-28px);
+    padding: 5px;
 }
         /* FINAL DO CADASTRO */
         /* <--------------------------------------------------> */
@@ -163,13 +169,14 @@ input[type="reset"]{
     top: 100px;
     margin: auto;
     text-align: center;
-    background-color: #000000;
+    background-color: #535353;;
     padding: 50px;
     padding-top: 20px;
     padding-right: 50px;
-    padding-bottom: 140px;
+    padding-bottom: 200px;
     border-radius: 10px;
     box-shadow: 0px 0px 50px white;
+    margin-bottom: 200px;
     
 }
 
@@ -269,7 +276,7 @@ input[type="radio"]{
 
     margin-top: 25px;
     width: 5%;
-    transform: translate(-20px);
+    transform: translate(-30px);
   
 
     
@@ -282,7 +289,7 @@ input[type="radio"]{
 input[type="checkbox"]{
     margin-bottom: 20px;
     margin-top: 30px;
-    transform: translate(-20px);
+    transform: translate(-30px);
 
 
 }
@@ -290,7 +297,7 @@ b{
     color: #ff0000;
     font-size: 16px;
     position: relative;
-    right: 20px;
+    right: 30px;
 }
 
 span{
