--- a/CSS/MediaQueries.css
+++ b/CSS/MediaQueries.css
@@ -67,7 +67,9 @@
     input[type="submit"]{
         position: absolute;
         transform: translate(-54px, -3px);
-        padding: 5.3px;
+        padding: 5px;
+        padding-bottom: 7.9px;
+        padding-top: 3.7px;
         width: 40px;
         background-color:#474747;
         color: white;
@@ -98,14 +100,12 @@
         
     }
     input[type="text"]:hover{
-    
-        background-image: url(../assets/icons8-pesquisar-20.png);
-        background-repeat: no-repeat;
-        background-position: calc(75%);
+        font-size: 11px;
+        background-image: none;
         padding-left: 1px;
         outline-style: solid;
         outline-color: #0000FF;
-        outline-width: 2px;
+        outline-width: 3px;
     
     }
     
@@ -221,7 +221,14 @@
         font-size: 9px;
     }
     #compartilhar{
-        transform: translate(140px, -22px);
+        position: relative;
+        right: 12px;
+    }
+    #t-compartilha{
+        
+        position: relative;
+        left: 140px;
+        bottom: 15px;
     }
     
     footer{
@@ -252,14 +259,12 @@
         width: 15px;
     }
     .inscritos{
-        font-weight: 100;
-        color: gray;
-        font-size: 11px;
-        position: relative;
-        left: -30px;
-        top: 10px;
+        position: absolute;
+        bottom: 85px;
+        left: 40px;
+        font-size: 10px;
     
-    }
+}
     .inscrever{
         background-color: #ff0000;
         padding: 5px;
@@ -270,7 +275,7 @@
         height: 20px;
         font-size: 12px;
         width: fit-content;
-        bottom: 120px;
+        bottom: 90px;
         
     
     }
