--- a/CSS/style.css
+++ b/CSS/style.css
@@ -301,8 +301,7 @@ footer{
     padding: 10px;
     text-shadow: 1px 0px #ffff;
     text-decoration: underline;
-    bottom: 0px;
-    left: 120px;
+    margin-left: 50%;
 
     
 }
